package hello;

option java_package = "com.hello.suripu.api.input";
option java_outer_classname = "InputProtos";
// option optimize_for = SPEED;


message SyncResponse {

    message FileDownload {
        optional string host =1;
        optional string url =2;
        optional bool copy_to_serial_flash =4;
        optional bool reset_network_processor =5;
        optional bool reset_application_processor =6;
        optional string serial_flash_filename =7;
        optional string serial_flash_path =8;
        optional string sd_card_filename =3;
        optional string sd_card_path =9;
    }

    message Alarm {
        optional uint32 start_time = 1;  // obselete,  use ring_offset_from_now
        optional uint32 end_time = 2;  // obselete, use ring_offset_from_now + ring_duration
        optional int32 ringtone_id = 3 [default = 1];
        optional int32 ring_offset_from_now_in_second = 4;  // This is a more fault tolerance design
        optional int32 ring_duration_in_second = 5;
    }

    message PairingAction {
        enum ActionType {
            PAIR = 0;
            UNPAIR = 1;
        }

        optional string ssid = 1;
        optional ActionType type = 2;
    }


    message WhiteNoise {
        optional int32 start_time = 1;
        optional int32 end_time = 2;
        optional int32 sound_id = 3;
    }

    message FlashAction {
        optional int32 red =1;
        optional int32 green =2;
        optional int32 blue =3;

        optional int32 delay_milliseconds = 4;
        optional bool fade_in = 5;
        optional bool fade_out = 6;
        optional bool rotate = 7;
        optional int32 alpha = 8;
    }

    enum RoomConditions {
        IDEAL = 1;
        WARNING = 2;
        ALERT = 3;
    }

    // TODO: failure cases (timeout, exponential backoff, etc.)

    optional int32 upload_cycle = 1;
    optional int32 sync_cycle = 2;
    optional int32 acc_scan_cyle = 3;
    optional int32 acc_sampling_interval = 4;
    optional int32 device_sampling_interval = 5;
    optional Alarm alarm = 6;
    optional PairingAction pairing_action = 7;
    optional WhiteNoise white_noise = 8;
    optional FlashAction flash_action = 9;
    optional bool reset_device = 10;
    optional RoomConditions room_conditions = 12;
    repeated FileDownload files = 13;

    // TODO: settings for snoring detection
    // TODO: settings for firmware update
}


message periodic_data {
    optional int32 unix_time=1;
    optional int32 light=2;
    optional int32 temperature=3;
    optional int32 humidity=4;
    optional int32 dust=5;
    optional string name=6;
    optional bytes mac=7;

    optional int32 light_variability=8;
    optional int32 light_tonality=9;

    optional int32 firmware_version=10;

    optional int32 dust_variability=13;
    optional int32 dust_max=14;
     optional int32 dust_min=15;

    message pill_data {
        // Be careful when copy paste, the index is not right :)
        optional int32 firmwareVersion = 1;
        optional bytes motionDataEncrypted = 2;
        optional string deviceId = 3;
        optional int32 batteryLevel = 4;
        optional int32 uptime = 5;
        optional int32 motionData = 6;
    }
    repeated pill_data pills=11;
    optional string device_id = 12;
}